Local storage: - save updated data in browser's local storage.

--- a/src/app/task-details/task-details.component.html
+++ b/src/app/task-details/task-details.component.html
@@ -75,4 +75,4 @@
 </div> -->
 
 <button class="button" (click)="updateTask()">Update task</button>
-<button class="button" (click)="log(task)">Log task to console</button>
+<!-- <button class="button" (click)="log(task)">Log task to console</button> -->
