Start using MDB on the root page

--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,3 +1,11 @@
-<a [routerLink]="['/']">
+<!-- <a [routerLink]="['/']">
   <h1>Projecto</h1>
-</a>
+</a> -->
+
+<nav class="navbar navbar-dark bg-primary">
+  <div class="container-fluid">
+    <a [routerLink]="['/']"
+      ><span class="navbar-brand mb-0 h1">Projecto</span></a
+    >
+  </div>
+</nav>
