--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,6 +1,6 @@
 <h2>Projects</h2>
 
-<div *ngFor="let project of projects">
+<!-- <div *ngFor="let project of projects">
   <h3>
     <a
       [title]="project.name + ' details'"
@@ -10,4 +10,23 @@
     </a>
     <p>{{ project.tasks.length }} tasks in project</p>
   </h3>
+</div> -->
+
+<div class="row">
+  <div class="col-sm-6" *ngFor="let project of projects">
+    <div class="card text-center border border-primary shadow-0 mb-3">
+      <div class="card-body">
+        <h5 class="card-title">{{ project.name }}</h5>
+        <a
+          [title]="project.name + ' details'"
+          [routerLink]="['/projects', project.name]"
+          class="btn btn-primary"
+          >Go to project</a
+        >
+      </div>
+      <div class="card-footer text-muted border-primary">
+        {{ project.tasks.length }} tasks in project
+      </div>
+    </div>
+  </div>
 </div>
