--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,16 +1,4 @@
-<h2>Projects</h2>
-
-<!-- <div *ngFor="let project of projects">
-  <h3>
-    <a
-      [title]="project.name + ' details'"
-      [routerLink]="['/projects', project.name]"
-    >
-      {{ project.name }}
-    </a>
-    <p>{{ project.tasks.length }} tasks in project</p>
-  </h3>
-</div> -->
+<h2>Projects board</h2>
 
 <div class="row">
   <div class="col-sm-6" *ngFor="let project of projects">
