Format createdAt date

--- a/src/app/task-details/task-details.component.html
+++ b/src/app/task-details/task-details.component.html
@@ -120,7 +120,7 @@
   <input
     id="createdAt"
     type="text"
-    [ngModel]="task.createdAt"
+    [ngModel]="createdAtFormatted"
     class="form-control"
     placeholder="Task createdAt"
     aria-label="createdAt"
