Styling web pages

--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,11 +1,9 @@
-<!-- <a [routerLink]="['/']">
-  <h1>Projecto</h1>
-</a> -->
-
-<nav class="navbar navbar-dark bg-primary">
-  <div class="container-fluid">
-    <a [routerLink]="['/']"
-      ><span class="navbar-brand mb-0 h1">Projecto</span></a
-    >
-  </div>
-</nav>
+<header class="h-100">
+  <nav class="navbar navbar-dark bg-primary shadow-4">
+    <div class="container-fluid">
+      <a [routerLink]="['/']"
+        ><span class="navbar-brand mb-0 h1">Projecto</span></a
+      >
+    </div>
+  </nav>
+</header>
