--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -1,23 +1,28 @@
-<h2>Project details board</h2>
+<div class="container-fluid bg-warning bg-gradient w-auto p-3 vh-100">
+  <div class="text-center mb-3">
+    <h2>Project details board</h2>
+  </div>
 
-<div *ngIf="project">
-  <h3>{{ project.name }} - Tasks list</h3>
+  <div *ngIf="project">
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-5">
+        <h3 class="text-center">{{ project.name }} - Tasks list</h3>
 
-  <div class="row">
-    <div class="col-md-8">
-      <ul class="list-group">
-        <li
-          *ngFor="let task of project.tasks"
-          [routerLink]="['/projects', project.name, 'tasks', task.id]"
-          class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-        >
-          {{ task.title }}
-          <h5>
-            <span class="badge bg-primary text-light">{{ task.status }}</span>
-          </h5>
-        </li>
-      </ul>
+        <ul class="list-group">
+          <li
+            *ngFor="let task of project.tasks"
+            [routerLink]="['/projects', project.name, 'tasks', task.id]"
+            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+          >
+            {{ task.title }}
+            <h5>
+              <span class="badge bg-primary text-white">{{ task.status }}</span>
+            </h5>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-2"></div>
+      <div class="col-md-4 bg-light">Search functionality comming soon</div>
     </div>
-    <div class="col-md-4 bg-light">Search functionality comming soon</div>
   </div>
 </div>
