--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,19 +1,21 @@
-<h2>Projects board</h2>
+<div class="container-fluid bg-warning bg-gradient w-auto p-3 vh-100">
+  <h2>Projects board</h2>
 
-<div class="row">
-  <div class="col-sm-6" *ngFor="let project of projects">
-    <div class="card text-center border border-primary shadow-0 mb-3">
-      <div class="card-body">
-        <h5 class="card-title">{{ project.name }}</h5>
-        <a
-          [title]="project.name + ' details'"
-          [routerLink]="['/projects', project.name]"
-          class="btn btn-primary"
-          >Go to project</a
-        >
-      </div>
-      <div class="card-footer text-muted border-primary">
-        {{ project.tasks.length }} tasks in project
+  <div class="row d-flex justify-content-center">
+    <div class="col-sm-4" *ngFor="let project of projects">
+      <div class="card text-center border border-primary shadow-0 mb-3">
+        <div class="card-body">
+          <h5 class="card-title">{{ project.name }}</h5>
+          <a
+            [title]="project.name + ' details'"
+            [routerLink]="['/projects', project.name]"
+            class="btn btn-primary"
+            >Go to project</a
+          >
+        </div>
+        <div class="card-footer text-muted border-primary">
+          {{ project.tasks.length }} tasks in project
+        </div>
       </div>
     </div>
   </div>
