--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,24 +1,27 @@
 /* Application-wide Styles */
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
-}
-h2,
-h3 {
-  color: #444;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: lighter;
-}
+// h1 {
+//   color: #369;
+//   font-family: Arial, Helvetica, sans-serif;
+//   font-size: 250%;
+// }
+// h2,
+// h3 {
+//   color: #444;
+//   font-family: Arial, Helvetica, sans-serif;
+//   font-weight: lighter;
+// }
 body {
   margin: 2em;
+  // background-color: rgb(16, 16, 49);
+  // background-color: rgba(251, 251, 251, 0.15);
+  background-color: #e3f2fd;
 }
-body,
-input[type="text"],
-button {
-  color: #333;
-  font-family: Cambria, Georgia, serif;
-}
+// body,
+// input[type="text"],
+// button {
+//   color: #333;
+//   font-family: Cambria, Georgia, serif;
+// }
 /* everywhere else */
 * {
   font-family: Arial, Helvetica, sans-serif;
