--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-warning bg-gradient w-auto p-3 vh-100">
+<div class="container-fluid w-auto p-3 vh-100">
   <div class="text-center mb-3">
     <h2>Project details board</h2>
   </div>
