--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,5 +1,5 @@
-<header class="h-100">
-  <nav class="navbar navbar-dark bg-primary shadow-4">
+<header class="h-100 mb-5">
+  <nav class="navbar navbar-dark bg-primary fixed-top">
     <div class="container-fluid">
       <a [routerLink]="['/']"
         ><span class="navbar-brand mb-0 h1">Projecto</span></a
