--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -1,12 +1,10 @@
 <div class="container-fluid w-auto p-3 vh-100">
-  <div class="text-center mb-3">
-    <h2>Project details board</h2>
-  </div>
-
   <div *ngIf="project">
-    <div class="row d-flex justify-content-center">
+    <div class="row d-flex justify-content-center pb-3">
       <div class="col-md-5">
-        <h3 class="text-center">{{ project.name }} - Tasks list</h3>
+        <div class="p-2">
+          <h3 class="text-center">{{ project.name }} - Tasks list</h3>
+        </div>
 
         <ul class="list-group">
           <li
@@ -22,7 +20,9 @@
         </ul>
       </div>
       <div class="col-md-2"></div>
-      <div class="col-md-4 bg-light">Search functionality comming soon</div>
+      <div class="col-md-4 bg-light text-center p-3">
+        Search functionality comming soon
+      </div>
     </div>
   </div>
 </div>
