--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid w-auto p-3 vh-100">
-  <h2>Projects board</h2>
+<div class="container-fluid w-auto p-3">
+  <h3>Projects board</h3>
 
   <div class="container-md w-80">
     <div class="row d-flex flex-row justify-content-between">
