Adapt Angular's auto-generated tests to pass.

--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -3,9 +3,9 @@
 
   <div class="container-md w-80">
     <!-- Use when expecting 3 or more projects -->
-    <!-- <div id="pr-position" class="row d-flex flex-row"> -->
-    <!-- Use when expectin 1, 2 or 3 projects -->
-    <div id="pr-position" class="row d-flex flex-row justify-content-around">
+    <div id="pr-position" class="row d-flex flex-row">
+      <!-- Use when expecting 1, 2 or 3 projects -->
+      <!-- <div id="pr-position" class="row d-flex flex-row justify-content-around"> -->
       <div
         class="col-lg-4 col-md-6 col-sm-6 p-3"
         *ngFor="let project of projects"
